added error responses to swagger.yml, added /users/{username} url
